hphp/hack/test/typecheck/shape/shape_field_check/key_exists_unset_key_open_shape.php
<?hh // strict

type s = shape('x' => int, ...);

function test(s $s): bool {
  Shapes::removeKey(inout $s, 'x');
  return Shapes::keyExists($s, 'x');
}
